--- a/preview/keegan_james/index.html
+++ b/preview/keegan_james/index.html
@@ -156,7 +156,7 @@
     
     <!-- Background Image -->
     <div class="absolute inset-0 opacity-10">
-    <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('/preview/keegan_james/pp.png');"></div>
+    <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('pp.png');"></div>
     </div>
   
     <div class="container mx-auto px-6 relative z-20 pt-10">
