--- a/preview/keegan_james/index.html
+++ b/preview/keegan_james/index.html
@@ -155,9 +155,10 @@
     <div class="absolute inset-0 bg-gradient-to-b from-neutral-900/70 to-neutral-900/90 z-10"></div>
     
     <!-- Background Image -->
-    <div class="absolute inset-0 opacity-10">
-    <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('pp.png');"></div>
+    <div class="absolute inset-0 bg-cover bg-center border border-red-500" 
+    style="background-image: url('/preview/keegan_james/pp.png');">
     </div>
+
   
     <div class="container mx-auto px-6 relative z-20 pt-10">
       <div class="max-w-4xl mx-auto text-center">
