--- a/preview/keegan_james/index.html
+++ b/preview/keegan_james/index.html
@@ -155,7 +155,7 @@
     <div class="absolute inset-0 bg-gradient-to-b from-neutral-900/70 to-neutral-900/90 z-10"></div>
     
     <!-- Background Image -->
-    <div class="absolute inset-0 bg-cover bg-center border border-red-500" 
+    <div class="absolute inset-0 bg-cover bg-center border border-red-500 brightness-125" 
     style="background-image: url('/preview/keegan_james/pp.png');">
     </div>
 
