--- a/preview/makara_yoga/index.html
+++ b/preview/makara_yoga/index.html
@@ -414,15 +414,12 @@
         </div>
 
         <div class="relative h-96 rounded-2xl overflow-hidden animate__animated animate__fadeInRight">
-          <div class="absolute inset-0 bg-[#7B9E89]/20"></div>
-          <div class="w-full h-full bg-[#E8E1D9] flex items-center justify-center">
-            <svg class="w-24 h-24 text-[#7B9E89]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-            </svg>
+            <div class="absolute inset-0 bg-[#7B9E89]/20"></div>
+            <div class="w-full h-full bg-[#E8E1D9] flex items-center justify-center">
+              <img src="'/preview/makara_yoga/pp.png" alt="Description" class="w-full h-full object-cover">
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
+          
   </section>
 </div>
 </element><element id="20bdbea0-0e0e-4280-b915-a956f5866ffc" data-section-id="20bdbea0-0e0e-4280-b915-a956f5866ffc">
