--- a/preview/makara_yoga/index.html
+++ b/preview/makara_yoga/index.html
@@ -416,7 +416,7 @@
         <div class="relative h-96 rounded-2xl overflow-hidden animate__animated animate__fadeInRight">
             <div class="absolute inset-0 bg-[#7B9E89]/20"></div>
             <div class="w-full h-full bg-[#E8E1D9] flex items-center justify-center">
-              <img src="preview/makara_yoga/pp.png" alt="Description" class="w-full h-full object-cover">
+            <img src="/preview/makara_yoga/pp.png" alt="Description" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
           </div>
           
