--- a/preview/makara_yoga/index.html
+++ b/preview/makara_yoga/index.html
@@ -327,10 +327,9 @@
   <section id="hero" class="relative min-h-[70vh] flex items-center justify-center bg-neutral-900">
     <div class="absolute inset-0 bg-gradient-to-r from-neutral-900/90 to-neutral-900/70"></div>
     
-    <div class="h-full w-full absolute top-0 left-0 z-0 overflow-hidden">
-      <video autoplay loop muted playsinline class="w-full h-full object-cover">
-        <source src="path-to-video.mp4" type="video/mp4">
-      </video>
+    <!-- Background Image -->
+    <div class="absolute inset-0 bg-cover bg-center border border-red-500 brightness-500" 
+    style="background-image: url('/preview/makara_yoga/pp.png');">
     </div>
 
     <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
