--- a/preview/easy_leads/index.html
+++ b/preview/easy_leads/index.html
@@ -299,7 +299,7 @@
       <img src="https://www.leighday.co.uk/media/xdvpctac/stocks-and-shares.jpg" alt="Professional Law Firm" class="w-full h-full object-cover mix-blend-overlay">
     </div>
 
-    <div class="w-full px-4 py-24 relative z-10 flex flex-col justify-center items-center">
+    <div class="container mx-auto px-4 py-20 relative z-10">
       <div class="max-w-3xl">
         <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white mb-6 animate__animated animate__fadeInUp">
           Running a Law Firm But Not Getting Enough Clients?
