--- a/preview/makara_yoga/index.html
+++ b/preview/makara_yoga/index.html
@@ -329,7 +329,7 @@
     
     <!-- Background Image -->
     <div class="absolute inset-0 bg-cover bg-center border border-red-500" 
-    style="background-image: url('/preview/makara_yoga/pp.png');">
+    style="background-image: url('/preview/makara_yoga/pp.jpg');">
     </div>
 
     <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
