--- a/preview/makara_yoga/index.html
+++ b/preview/makara_yoga/index.html
@@ -328,7 +328,7 @@
     <div class="absolute inset-0 bg-gradient-to-r from-neutral-900/90 to-neutral-900/70"></div>
     
     <!-- Background Image -->
-    <div class="absolute inset-0 bg-cover bg-center border border-red-500" 
+    <div class="absolute inset-0 bg-cover bg-center" 
     style="background-image: url('/preview/makara_yoga/pp.jpg');">
       <div class="absolute inset-0 bg-black opacity-50"></div>
     </div>
