--- a/preview/shuri_collection/index.html
+++ b/preview/shuri_collection/index.html
@@ -318,7 +318,7 @@
         <div class="video-slide absolute inset-0 opacity-100 transition-opacity duration-1000">
           <div class="absolute inset-0 bg-neutral-900 opacity-50"></div>
           <video class="object-cover h-full w-full" autoplay muted loop playsinline>
-            <source src="https://placehold.co/1920x1080.mp4" type="video/mp4">
+            <source src="https://www.youtube.com/watch?v=pRcHNC990d8" type="video/mp4">
           </video>
         </div>
       </div>
